creusot/tests/should_fail/ghost/deref_in_program.stderr
error: dereference of a ghost variable in program context
 --> deref_in_program.rs:6:18
  |
6 |     let _: i32 = *g;
  |                  ^^ help: try wrapping this expression in a ghost block: `ghost!{ *g }`

error: aborting due to 1 previous error

